--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,9 @@ on:
     branches:
       - main
       - test
-
+  release:
+    types: 
+      - published
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
