--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - test
   release:
     types: 
-      - published
+      - prereleased
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
