--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
             /tmp/ncp-e73minimal_nrf52840_no_bootloader.bin
             /tmp/rcp-particle_xenon_no_bootloader.bin
             /tmp/rcp-e73minimal_nrf52840_no_bootloader.bin
-          draft: true
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
