--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,21 +46,21 @@ jobs:
         run: |
           cd ~/zephyrproject
           west build $GITHUB_WORKSPACE -b particle_xenon --pristine -- -D OVERLAY_CONFIG=overlay-usb-nrf-br.conf
-          cp build/zephyr/zephyr.signed.bin /tmp/ncp-particle_xenon.bin
+          cp build/zephyr/zephyr.signed.hex /tmp/ncp-particle_xenon.hex
           west build $GITHUB_WORKSPACE -b e73minimal_nrf52840 --pristine
-          cp build/zephyr/zephyr.signed.bin /tmp/ncp-e73minimal_nrf52840.bin
+          cp build/zephyr/zephyr.signed.hex /tmp/ncp-e73minimal_nrf52840.hex
           west build $GITHUB_WORKSPACE -b particle_xenon --pristine -- -D OVERLAY_CONFIG="overlay-usb-nrf-br.conf;overlay-rcp.conf"
-          cp build/zephyr/zephyr.signed.bin /tmp/rcp-particle_xenon.bin
+          cp build/zephyr/zephyr.signed.hex /tmp/rcp-particle_xenon.hex
           west build $GITHUB_WORKSPACE -b e73minimal_nrf52840 --pristine -- -D OVERLAY_CONFIG="overlay-rcp.conf"
-          cp build/zephyr/zephyr.signed.bin /tmp/rcp-e73minimal_nrf52840.bin
+          cp build/zephyr/zephyr.signed.hex /tmp/rcp-e73minimal_nrf52840.hex
           west build $GITHUB_WORKSPACE -b particle_xenon --pristine -- -D OVERLAY_CONFIG=overlay-usb-nrf-br.conf;overlay-no-bootloader.conf"
-          cp build/zephyr/zephyr.bin /tmp/ncp-particle_xenon_no_bootloader.bin
+          cp build/zephyr/zephyr.hex /tmp/ncp-particle_xenon_no_bootloader.hex
           west build $GITHUB_WORKSPACE -b e73minimal_nrf52840 --pristine -- -D OVERLAY_CONFIG="overlay-no-bootloader.conf"
-          cp build/zephyr/zephyr.bin /tmp/ncp-e73minimal_nrf52840_no_bootloader.bin
+          cp build/zephyr/zephyr.hex /tmp/ncp-e73minimal_nrf52840_no_bootloader.hex
           west build $GITHUB_WORKSPACE -b particle_xenon --pristine -- -D OVERLAY_CONFIG="overlay-usb-nrf-br.conf;overlay-rcp.conf;overlay-no-bootloader.conf"
-          cp build/zephyr/zephyr.bin /tmp/rcp-particle_xenon_no_bootloader.bin
+          cp build/zephyr/zephyr.hex /tmp/rcp-particle_xenon_no_bootloader.hex
           west build $GITHUB_WORKSPACE -b e73minimal_nrf52840 --pristine -- -D OVERLAY_CONFIG="overlay-rcp.conf;overlay-no-bootloader.conf"
-          cp build/zephyr/zephyr.bin /tmp/rcp-e73minimal_nrf52840_no_bootloader.bin
+          cp build/zephyr/zephyr.hex /tmp/rcp-e73minimal_nrf52840_no_bootloader.hex
           
 
       - name: Release
@@ -68,14 +68,14 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            /tmp/ncp-particle_xenon.bin
-            /tmp/ncp-e73minimal_nrf52840.bin
-            /tmp/rcp-particle_xenon.bin
-            /tmp/rcp-e73minimal_nrf52840.bin
-            /tmp/ncp-particle_xenon_no_bootloader.bin
-            /tmp/ncp-e73minimal_nrf52840_no_bootloader.bin
-            /tmp/rcp-particle_xenon_no_bootloader.bin
-            /tmp/rcp-e73minimal_nrf52840_no_bootloader.bin
+            /tmp/ncp-particle_xenon.hex
+            /tmp/ncp-e73minimal_nrf52840.hex
+            /tmp/rcp-particle_xenon.hex
+            /tmp/rcp-e73minimal_nrf52840.hex
+            /tmp/ncp-particle_xenon_no_bootloader.hex
+            /tmp/ncp-e73minimal_nrf52840_no_bootloader.hex
+            /tmp/rcp-particle_xenon_no_bootloader.hex
+            /tmp/rcp-e73minimal_nrf52840_no_bootloader.hex
           prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
