--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           python3-dev python3-pip python3-setuptools python3-tk python3-wheel xz-utils file \
           make gcc gcc-multilib g++-multilib libsdl2-dev
           pip3 install --user -U west
-          west init ~/zephyrproject --mr v2.5.0
+          west init ~/zephyrproject
           cd ~
           wget https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.12.4/zephyr-sdk-0.12.4-x86_64-linux-setup.run
           chmod +x zephyr-sdk-0.12.4-x86_64-linux-setup.run
