--- a/prj.conf
+++ b/prj.conf
@@ -25,6 +25,7 @@ CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=2048
 CONFIG_OPENTHREAD_COPROCESSOR=y
 CONFIG_OPENTHREAD_COPROCESSOR_NCP=y
 CONFIG_OPENTHREAD_COPROCESSOR_RCP=n
+CONFIG_OPENTHREAD_THREAD_VERSION_1_2=y
 
 CONFIG_NET_PKT_RX_COUNT=8
 CONFIG_NET_PKT_TX_COUNT=8
