--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_2.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.1
-        arm-none-eabi-objcopy -O ihex build/bin/build/bin/ot-rcp  /tmp/rcp-e73_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-rcp  /tmp/rcp-e73_ot-1_1.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.2
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-e73_ot-1_2.hex
