--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,11 +58,17 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
         chmod +x $GITHUB_WORKSPACE/script/build
-        script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1
+        script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1 -DPARTICLE_INTERNAL_ANTENNA
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_1.hex
         rm -rf build
-        script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2
+        script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2 -DPARTICLE_INTERNAL_ANTENNA
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_2.hex
+        rm -rf build
+        script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1 -DPARTICLE_EXTERNAL_ANTENNA
+        arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ext_ant_ot-1_1.hex
+        rm -rf build
+        script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2 -DPARTICLE_EXTERNAL_ANTENNA
+        arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ext_ant_ot-1_2.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp  /tmp/rcp-e73_ot-1_1.hex
@@ -77,6 +83,8 @@ jobs:
         files: |
           /tmp/rcp-particle_xenon_ot-1_2.hex
           /tmp/rcp-particle_xenon_ot-1_1.hex
+          /tmp/rcp-particle_xenon_ext_ant_ot-1_1.hex
+          /tmp/rcp-particle_xenon_ext_ant_ot-1_2.hex
           /tmp/rcp-e73_ot-1_1.hex
           /tmp/rcp-e73_ot-1_2.hex
         prerelease: true
