--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -39,4 +39,4 @@ updates:
     rebase-strategy: "disabled"
     open-pull-requests-limit: 1
     reviewers:
-      - "MarekPorwisz"
+      - "daniel-nicolai-hansten"
