Create working Openthread RCP firmware for nrf52 E73 Fixes #13

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,21 +60,28 @@ jobs:
         chmod +x $GITHUB_WORKSPACE/script/build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1 -DOT_PLATFORM_DEFINES=PARTICLE_INTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ot-1_1.hex
         rm -rf build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2 -DOT_PLATFORM_DEFINES=PARTICLE_INTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_2.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ot-1_2.hex
         rm -rf build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1 -DOT_PLATFORM_DEFINES=PARTICLE_EXTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ext_ant_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ext_ant_ot-1_1.hex
         rm -rf build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2 -DOT_PLATFORM_DEFINES=PARTICLE_EXTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ext_ant_ot-1_2.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ext_ant_ot-1_2.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp  /tmp/rcp-e73_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp  /tmp/ncp-e73_ot-1_1.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.2
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-e73_ot-1_2.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-e73_ot-1_2.hex
+        
 
     - name: Release
       uses: softprops/action-gh-release@v1
@@ -85,6 +92,10 @@ jobs:
           /tmp/rcp-particle_xenon_ot-1_1.hex
           /tmp/rcp-particle_xenon_ext_ant_ot-1_1.hex
           /tmp/rcp-particle_xenon_ext_ant_ot-1_2.hex
+          /tmp/ncp-particle_xenon_ot-1_2.hex
+          /tmp/ncp-particle_xenon_ot-1_1.hex
+          /tmp/ncp-particle_xenon_ext_ant_ot-1_1.hex
+          /tmp/ncp-particle_xenon_ext_ant_ot-1_2.hex
         prerelease: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
