--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,27 +60,27 @@ jobs:
         chmod +x $GITHUB_WORKSPACE/script/build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1 -DOT_PLATFORM_DEFINES=PARTICLE_INTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_1.hex
-        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp-ftd /tmp/ncp-particle_xenon_ot-1_1.hex
         rm -rf build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2 -DOT_PLATFORM_DEFINES=PARTICLE_INTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ot-1_2.hex
-        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ot-1_2.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp-ftd /tmp/ncp-particle_xenon_ot-1_2.hex
         rm -rf build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.1 -DOT_PLATFORM_DEFINES=PARTICLE_EXTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ext_ant_ot-1_1.hex
-        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ext_ant_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp-ftd /tmp/ncp-particle_xenon_ext_ant_ot-1_1.hex
         rm -rf build
         script/build nrf52840 USB_trans  -DOT_THREAD_VERSION=1.2 -DOT_PLATFORM_DEFINES=PARTICLE_EXTERNAL_ANTENNA=1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-particle_xenon_ext_ant_ot-1_2.hex
-        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-particle_xenon_ext_ant_ot-1_2.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp-ftd /tmp/ncp-particle_xenon_ext_ant_ot-1_2.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.1
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp  /tmp/rcp-e73_ot-1_1.hex
-        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp  /tmp/ncp-e73_ot-1_1.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp-ftd  /tmp/ncp-e73_ot-1_1.hex
         rm -rf build
         script/build nrf52840 UART_trans  -DOT_THREAD_VERSION=1.2
         arm-none-eabi-objcopy -O ihex build/bin/ot-rcp /tmp/rcp-e73_ot-1_2.hex
-        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp /tmp/ncp-e73_ot-1_2.hex
+        arm-none-eabi-objcopy -O ihex build/bin/ot-ncp-ftd /tmp/ncp-e73_ot-1_2.hex
         
 
     - name: Release
