--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,9 +105,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          /tmp/rcp-particle_xenon_ot-1_1.hex
-          /tmp/rcp-particle_xenon_ext_ant_ot-1_1.hex
-          /tmp/rcp-e73_ot-1_1.hex
+          /tmp/*.hex
         prerelease: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}     
