--- a/app/boards/arm/E73-minimal/e73minimal_nrf52840.dts
+++ b/app/boards/arm/E73-minimal/e73minimal_nrf52840.dts
@@ -21,11 +21,13 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 		zephyr,code-partition = &slot0_partition;
+		zephyr,ot-uart = &uart0;
+		zephyr,ieee802154 = &ieee802154;
 	};
+};
 
-
-
-
+&ieee802154 {
+	status = "okay";
 };
 
 &flash0 {
